--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
+    "pdf-parse": "^1.1.1",
     "playwright": "^1.42.1",
     "winston": "^3.11.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
+    "@types/pdf-parse": "^1.1.4",
     "@types/yargs": "^17.0.32",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
